20150826 Finished uniques (for now) Minor skill/item changes Word-break on the equipment menu bugged me :(

--- a/src/UI/Components/Equipment/Equipment.css
+++ b/src/UI/Components/Equipment/Equipment.css
@@ -20,7 +20,7 @@
 #Equipment .overlay { position:absolute; display:none; white-space:nowrap; z-index:900; overflow:auto; border: 4px solid #FFFFFF; border-radius: 4px; padding:5px; background:rgba(0,0,0,0.7); color:white; text-shadow:1px 1px black;}
 
 #Equipment .item button { width:24px; height:24px; background-color:transparent; background-repeat:no-repeat; border: none; }
-#Equipment .item span  { width:80px; height:24px; display:inline-block; line-height:12px; word-break:break-all; overflow:hidden; text-shadow:1px 1px white; }
+#Equipment .item span  { width:80px; height:24px; display:inline-block; line-height:12px; word-break:keep-all; text-shadow:1px 1px white; }
 #Equipment span.yellow { color:#aa9a59; }
 #Equipment span.green { color:#64aa58; }
 #Equipment span.blue { color:#3550aa; }
